# Phidias

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
lib/: Makefile.am  phidias-channels-viewer.c  phidias-channels-viewer.h  phidias-extra-column.c  phidias-extra-column.h  phidias-items-viewer.c  phidias-items-viewer.h  phidias-plugins-marshal.list
po/: POTFILES.in
src/: Makefile.am  common.h  container-conf.h  expander.c  expander.h  item-conf.h  logo.h  main.c  phidias-channelview.c  phidias-channelview.h  phidias-engine.c  phidias-engine.h  phidias-loader.c  phidias-loader.h  phidias-marshal.list  phidias-module.c  phidias-module.h  phidias-search-entry.c  phidias-search-entry.h  phidias-shell.c  phidias-shell.h  phidias-views.c  phidias-views.h
src/channels_plugins/: Makefile.am  phidias-channels-by-name.c  phidias-channels-by-name.h
src/items_plugins/: Makefile.am  phidias-items-classic.c  phidias-items-classic.h  phidias-items-geo.c  phidias-items-geo.h  phidias-items-stream.c  phidias-items-stream.h  phidias-items-tags.c  phidias-items-tags.h
tools/: Makefile.am
tools/feeds-manager/: Makefile.am  common.h  feed-settings.c  feed-settings.h  feeds-adder.c  feeds-adder.h  main.c  marshal.list  progress-box.c  progress-box.h
